--- a/web/templates/exp05.html
+++ b/web/templates/exp05.html
@@ -357,17 +357,9 @@
 
                                     <div class="result-card">
                                         <div class="result-content" style="width:80%; margin: 0 auto;">
-                                            <p>
-                                                <span>判断两个样本被不公平对待的标准：①.分类结果1≠分类结果2；</span><span>②.样本1与样本2相似度≥[[ eps
-                                                    ]]</span>
-                                            </p>
-                                            <p>
-                                                <span>当前输入样本：①分类结果1[[ comparisonSymbol ]]分类结果2； ②样本1与样本2相似度为[[ dx
-                                                    ]]</span><span>[[ ]]</span>
-                                            </p>
-                                            <p>
-                                                <span>判断结果为</span><span>[[ fairness_info ]]</span>
-                                            </p>
+                                            <p><span>判断两个样本被不公平对待的标准：①.分类结果1≠分类结果2；</span><span>②.样本1与样本2差异≤[[ parameter_c ]]</span></p>
+                                            <p><span>当前输入样本：①分类结果1[[ comparisonSymbol ]]分类结果2； ②样本1与样本2差异为[[ dx ]]</span></p>
+                                            <p><span>判断模型对两个样本的分类结果为</span><span><b>[[ fairness_info ]]</b></span></p>
 
                                         </div>
 
@@ -500,7 +492,7 @@
                     dy: 'yyy',
                     fairness_info: '',
                     // 差异度
-                    eps: '',
+                    parameter_c: '',
                     initialValue: '',
                     rules: {},
                     rules2: {},
@@ -653,9 +645,9 @@
                                         } else {
                                             this.result_color2 = 'green'
                                         }
-                                        _this.dx = response.data.fair_data.dx;
+                                        _this.dx = response.data.fair_data.dx === 0 ? 0 : (response.data.fair_data.dx).toExponential(4);
                                         _this.dy = response.data.fair_data.dy;
-                                        _this.eps = response.data.fair_data.eps;
+                                        _this.parameter_c = (1/response.data.fair_data.eps).toExponential(4);
                                         let flag = response.data.fair_data.fair_or_not;
                                         if (flag) {
                                             _this.fairness_info = "公平";
