--- a/web/templates/exp03.html
+++ b/web/templates/exp03.html
@@ -53,49 +53,43 @@
                         <h1>设定审计使用的公平性的指标</h1>
                     </div>
 
-                    <div class="task-content">
-                        <div class="task-form-description">
-                            <p>当 ① <b>两个样本特征非常相似</b>，且 ② <b>模型对他们的分类结果不同</b>时，</p>
-                            <p>我们认为模型的分类结果不公平。因此，为了判断模型分类结果是否公平，我们需要一个指标来<b>量化两个样本间的特征相似程度</b>。</p>
-                            <p>衡量样本相似程度的指标应该满足如下特点：仅有敏感属性不同的一对样本<b>非常相似</b>。据此，我们提供了两类常用的衡量样本相似程度的指标：</p>
-                        </div>
-                        <div class="task-form-description">
-                            <el-radio v-model="metric" label="Eu">基于欧氏距离的相似度：两个样本的相似度平等地由敏感属性以外的所有其他特征决定。</el-radio>
-                            <el-radio v-model="metric" label="LR">基于LR距离
-                                <el-tooltip class="item" effect="light" content="Yurochkin M, Bower A, Sun Y. Training individually fair ML models with sensitive subspace robustness[J]. 2020." placement="right-start">
-                                    <i class="el-icon-question"></i>
-                                </el-tooltip>
-                                的相似度：两个样本的相似度主要由那些与敏感属性相关性更弱的其他特征决定。
-                            </el-radio>
-                        </div>
-                        <div class="task-form-description">
-                            <p>具体来说，样本间的相似度为其距离的倒数。对同样的一对样本，基于两种距离的相似度运算结果会有细微差别。作为审计人员，若您对二者无偏好，则<b>建议选择LR距离</b>，因为它能够更好地刻画与敏感属性相关的特征给样本带来的变化。</p>
-                        </div>
+                <div class="task-content">
+                    <div class="task-form-description">
+                        <p>当 ① <b>两个样本特征差异足够小</b>，且 ② <b>模型对他们的分类结果不同</b>时，</p>
+                        <p>我们认为模型的分类结果不公平。因此，为了判断模型分类结果是否公平，我们需要一个指标来<b>量化两个样本间的特征差异</b>。</p>
+                        <p>衡量样本差异的指标应该满足如下特点：仅有敏感属性不同的一对样本可以认为<b>没有差异</b>。据此，我们提供了两类常用的衡量样本差异的指标：</p>
+                    </div>
+                    <div class="task-form-description">
+                        <el-radio v-model="metric" label="LR">LR距离
+                            <el-tooltip class="item" effect="light" content="Yurochkin M, Bower A, Sun Y. Training individually fair ML models with sensitive subspace robustness[J]. 2020." placement="right-start"><i class="el-icon-question"/></i></el-tooltip>
+                            ：敏感属性不决定样本间差异，与敏感属性相关性越低的特征越能决定样本间差异大小。
+                        </el-radio>
+                        <el-radio v-model="metric" label="Eu">欧氏距离：敏感属性不决定样本间差异，其他特征对样本间差异的影响是相同的。</el-radio>
+                    </div>
+                    <div class="task-form-description">
+                        <p>对同样的一对样本，基于两种距离运算结果会有细微差别。作为审计人员，若您对二者无偏好，则<b>建议选择LR距离</b>，因为它能够更好地刻画与敏感属性相关的特征给样本带来的变化。</p>
                     </div>
                 </div>
-                    </el-col>
-                    <el-col :span="12">
-                        <div class="task-area">
-                    <div class="task-title">
-                        <h1>设定审计的严格程度</h1>
+            </div>
+                </el-col>
+                <el-col :span="12">
+                    <div class="task-area">
+                <div class="task-title">
+                    <h1>设定审计的严格程度</h1>
+                </div>
+                <div class="task-content">
+                    <div class="task-form-description">
+                        <p>基于前面选择的样本相似度指标，我们可以对两个样本分类结果是否公平做出如下判断：</p>
+                        <p>如果两个样本得到的分类结果不同，当这两个样本<b>差异足够小</b>（距离≤c）时，我们可以判定模型分类结果不公平。</p>
+                        <p>这里的参数c决定了审计的严格程度，c的值越小，审计对于不公平分类结果的界定越严格，即：越难以找到模型的不公平分类结果。</p>
+                        <p>为了使审计结果更具有说服力，审计人员应当设置一个较小的c值。</p>
                     </div>
-                    <div class="task-content">
-                        <div class="task-form-description">
-                            <p>基于前面选择的样本相似度指标，我们可以对两个样本分类结果是否公平做出如下判断：</p>
-                            <p>如果两个样本得到的分类结果不同，当这两个样本<b>相似程度达到某种水平</b>（相似度≥c）时，我们可以判定模型分类结果不公平。</p>
-                            <p>这里的参数c决定了审计的严格程度，c的值越大，审计对于不公平分类结果的界定越严格，即：越难以找到模型的不公平分类结果。</p>
-                            <p>为了使审计结果更具有说服力，审计人员应当设置一个较大的c值。</p>
-                        </div>
-                        <div class="task-content-form">
-                                <span>请您设定c的值（默认为100000000）：
-                                    <el-input-number :step="1" :min="0"  v-model="epsilon"></el-input-number>
-                                </span>
-
-                            </el-radio-group>
-
-
-                        </div>
-                    </div>
+                    <el-form>
+                        <el-form-item label="请您设定c的值（默认为10^-8）：">
+                            <el-input v-model="parameter_c"></el-input>
+                        </el-form-item>
+                    </el-form>
+                </div>
 
                 </div>
                     </el-col>
@@ -133,7 +127,7 @@
             data(){
                 return{
                     metric:'LR',
-                    epsilon:'1e8'
+                    parameter_c:1E-8
                 };
             },
             methods:{
@@ -141,7 +135,7 @@
 
                 onSubmit(){
                     console.log(this.metric)
-                    axios.post("/api/exp03/",{dx: this.metric, eps: this.epsilon}).then(resp =>{
+                    axios.post("/api/exp03/",{dx: this.metric, eps: 1/this.parameter_c}).then(resp =>{
                         console.log(resp.data);
                         window.location.href = '/page04/';
                     }).error(err =>{
